<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="UnusedAttribute">
    <item
        android:id="@+id/action_one_step_back"
        android:showAsAction="never"
        android:title="@string/action_go_back"/>
    <item
        android:id="@+id/action_copy"
        android:showAsAction="never"
        android:title="@string/action_copy"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_rate"
        android:showAsAction="never"
        android:title="@string/action_rate"/>
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/action_help"/>
</menu>